// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<BVLinearGradient
  colors={
    Array [
      4281150765,
      4281940281,
    ]
  }
  endPoint={
    Object {
      "x": 1,
      "y": 0.25,
    }
  }
  locations={
    Array [
      0.2,
      0.3,
    ]
  }
  startPoint={
    Object {
      "x": 0.5,
      "y": 1,
    }
  }
  style={
    Object {
      "color": "transparent",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      center={null}
      hMargin="0%"
      hPad="0%"
      height="100%"
      justify="center"
      size={null}
      style={
        Object {
          "alignItems": "flex-start",
          "flex": 1,
          "flexDirection": "column",
          "flexWrap": "nowrap",
          "height": 1334,
          "justifyContent": "center",
          "marginHorizontal": 0,
          "marginVertical": 0,
          "paddingHorizontal": 0,
          "paddingVertical": 0,
          "width": undefined,
        }
      }
      vMargin="0%"
      vPad="0%"
      width={null}
    >
      <View
        center={null}
        hMargin="0%"
        hPad="2.5%"
        height={null}
        justify="flex-start"
        size={null}
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": undefined,
            "justifyContent": "flex-start",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "paddingHorizontal": 19,
            "paddingVertical": 73.5,
            "width": 750,
          }
        }
        vMargin="0%"
        vPad="5.5%"
        width="100%"
      />
      <View
        center={null}
        hMargin="0%"
        hPad="3%"
        height={null}
        justify="center"
        size={null}
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": undefined,
            "justifyContent": "center",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "paddingHorizontal": 22.5,
            "paddingVertical": 0,
            "width": 750,
          }
        }
        vMargin="0%"
        vPad="0%"
        width="100%"
      >
        <View
          center={null}
          hMargin="0%"
          hPad="0%"
          height={null}
          justify="center"
          size={null}
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "column",
              "flexWrap": "nowrap",
              "height": undefined,
              "justifyContent": "center",
              "marginHorizontal": 0,
              "marginVertical": 0,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": undefined,
            }
          }
          vMargin="0%"
          vPad="0%"
          width={null}
        >
          <Text>
            Hi
          </Text>
        </View>
      </View>
      <View
        center="end"
        hMargin="0%"
        hPad="0%"
        height={null}
        justify="center"
        size={null}
        style={
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": undefined,
            "justifyContent": "center",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "paddingHorizontal": 0,
            "paddingVertical": 0,
            "width": 750,
          }
        }
        vMargin="0%"
        vPad="0%"
        width="100%"
      >
        <View
          center={null}
          hMargin="0%"
          hPad="0%"
          height={null}
          justify="center"
          size={null}
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "column",
              "flexWrap": "nowrap",
              "height": undefined,
              "justifyContent": "center",
              "marginHorizontal": 0,
              "marginVertical": 0,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": undefined,
            }
          }
          vMargin="0%"
          vPad="0%"
          width={null}
        />
      </View>
    </View>
  </View>
</BVLinearGradient>
`;

exports[`should render with header, footer, logo 1`] = `
<BVLinearGradient
  colors={
    Array [
      4281150765,
      4281940281,
    ]
  }
  endPoint={
    Object {
      "x": 1,
      "y": 0.25,
    }
  }
  locations={
    Array [
      0.2,
      0.3,
    ]
  }
  startPoint={
    Object {
      "x": 0.5,
      "y": 1,
    }
  }
  style={
    Object {
      "color": "transparent",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      center={null}
      hMargin="0%"
      hPad="0%"
      height="100%"
      justify="center"
      size={null}
      style={
        Object {
          "alignItems": "flex-start",
          "flex": 1,
          "flexDirection": "column",
          "flexWrap": "nowrap",
          "height": 1334,
          "justifyContent": "center",
          "marginHorizontal": 0,
          "marginVertical": 0,
          "paddingHorizontal": 0,
          "paddingVertical": 0,
          "width": undefined,
        }
      }
      vMargin="0%"
      vPad="0%"
      width={null}
    >
      <View
        center={null}
        hMargin="0%"
        hPad="2.5%"
        height={null}
        justify="flex-start"
        size={null}
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": undefined,
            "justifyContent": "flex-start",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "paddingHorizontal": 19,
            "paddingVertical": 73.5,
            "width": 750,
          }
        }
        vMargin="0%"
        vPad="5.5%"
        width="100%"
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 150,
                "height": 300,
                "width": 300,
              },
            ]
          }
        >
          <FastImageView
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../app/assets/brand/main.jpg",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
      <View
        center={null}
        hMargin="0%"
        hPad="3%"
        height={null}
        justify="center"
        size={null}
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": undefined,
            "justifyContent": "center",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "paddingHorizontal": 22.5,
            "paddingVertical": 0,
            "width": 750,
          }
        }
        vMargin="0%"
        vPad="0%"
        width="100%"
      >
        <View
          center={null}
          hMargin="0%"
          hPad="0%"
          height={null}
          justify="center"
          size={null}
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "column",
              "flexWrap": "nowrap",
              "height": undefined,
              "justifyContent": "center",
              "marginHorizontal": 0,
              "marginVertical": 0,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": undefined,
            }
          }
          vMargin="0%"
          vPad="0%"
          width={null}
        >
          <Text>
            Hi
          </Text>
        </View>
      </View>
      <View
        center="end"
        hMargin="0%"
        hPad="0%"
        height={null}
        justify="center"
        size={null}
        style={
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": undefined,
            "justifyContent": "center",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "paddingHorizontal": 0,
            "paddingVertical": 0,
            "width": 750,
          }
        }
        vMargin="0%"
        vPad="0%"
        width="100%"
      >
        <View
          center={null}
          hMargin="0%"
          hPad="0%"
          height={null}
          justify="center"
          size={null}
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "column",
              "flexWrap": "nowrap",
              "height": undefined,
              "justifyContent": "center",
              "marginHorizontal": 0,
              "marginVertical": 0,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": undefined,
            }
          }
          vMargin="0%"
          vPad="0%"
          width={null}
        >
          <Text>
            Hi
          </Text>
        </View>
      </View>
    </View>
  </View>
</BVLinearGradient>
`;

exports[`should render with logo 1`] = `
<BVLinearGradient
  colors={
    Array [
      4281150765,
      4281940281,
    ]
  }
  endPoint={
    Object {
      "x": 1,
      "y": 0.25,
    }
  }
  locations={
    Array [
      0.2,
      0.3,
    ]
  }
  startPoint={
    Object {
      "x": 0.5,
      "y": 1,
    }
  }
  style={
    Object {
      "color": "transparent",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      center={null}
      hMargin="0%"
      hPad="0%"
      height="100%"
      justify="center"
      size={null}
      style={
        Object {
          "alignItems": "flex-start",
          "flex": 1,
          "flexDirection": "column",
          "flexWrap": "nowrap",
          "height": 1334,
          "justifyContent": "center",
          "marginHorizontal": 0,
          "marginVertical": 0,
          "paddingHorizontal": 0,
          "paddingVertical": 0,
          "width": undefined,
        }
      }
      vMargin="0%"
      vPad="0%"
      width={null}
    >
      <View
        center={null}
        hMargin="0%"
        hPad="2.5%"
        height={null}
        justify="flex-start"
        size={null}
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": undefined,
            "justifyContent": "flex-start",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "paddingHorizontal": 19,
            "paddingVertical": 73.5,
            "width": 750,
          }
        }
        vMargin="0%"
        vPad="5.5%"
        width="100%"
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 150,
                "height": 300,
                "width": 300,
              },
            ]
          }
        >
          <FastImageView
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../app/assets/brand/main.jpg",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
      <View
        center={null}
        hMargin="0%"
        hPad="3%"
        height={null}
        justify="center"
        size={null}
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": undefined,
            "justifyContent": "center",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "paddingHorizontal": 22.5,
            "paddingVertical": 0,
            "width": 750,
          }
        }
        vMargin="0%"
        vPad="0%"
        width="100%"
      >
        <View
          center={null}
          hMargin="0%"
          hPad="0%"
          height={null}
          justify="center"
          size={null}
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "column",
              "flexWrap": "nowrap",
              "height": undefined,
              "justifyContent": "center",
              "marginHorizontal": 0,
              "marginVertical": 0,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": undefined,
            }
          }
          vMargin="0%"
          vPad="0%"
          width={null}
        >
          <Text>
            Hi
          </Text>
        </View>
      </View>
      <View
        center="end"
        hMargin="0%"
        hPad="0%"
        height={null}
        justify="center"
        size={null}
        style={
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": undefined,
            "justifyContent": "center",
            "marginHorizontal": 0,
            "marginVertical": 0,
            "paddingHorizontal": 0,
            "paddingVertical": 0,
            "width": 750,
          }
        }
        vMargin="0%"
        vPad="0%"
        width="100%"
      >
        <View
          center={null}
          hMargin="0%"
          hPad="0%"
          height={null}
          justify="center"
          size={null}
          style={
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "flexDirection": "column",
              "flexWrap": "nowrap",
              "height": undefined,
              "justifyContent": "center",
              "marginHorizontal": 0,
              "marginVertical": 0,
              "paddingHorizontal": 0,
              "paddingVertical": 0,
              "width": undefined,
            }
          }
          vMargin="0%"
          vPad="0%"
          width={null}
        />
      </View>
    </View>
  </View>
</BVLinearGradient>
`;
